After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785292 - nautilus-desktop seg faults when getting properties of some files (example jpg attached)
nautilus-desktop seg faults when getting properties of some files (example jp...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Desktop
3.24.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-23 01:23 UTC by Ben Daines
Modified: 2017-08-07 10:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
jpg that causes seg fault (1.58 MB, image/jpeg)
2017-07-23 01:29 UTC, Ben Daines
  Details
desktop: initialize Exempi in main() (1.04 KB, patch)
2017-07-23 12:22 UTC, Ernestas Kulik
committed Details | Review

Description Ben Daines 2017-07-23 01:23:20 UTC
[ben@pluto ~]$ nautilus-desktop 

(nautilus-desktop:19592): Gtk-WARNING **: Failed to register client: GDBus.Error:org.gnome.SessionManager.AlreadyRegistered: Unable to register client
sys:1: PyGIWarning: Nautilus was imported without specifying a version first. Use gi.require_version('Nautilus', '3.0') before import to ensure that the right version gets loaded.

** (nautilus-desktop:19592): CRITICAL **: nautilus_menu_provider_get_background_items: assertion 'NAUTILUS_IS_MENU_PROVIDER (provider)' failed

** (nautilus-desktop:19592): CRITICAL **: nautilus_menu_provider_get_background_items: assertion 'NAUTILUS_IS_MENU_PROVIDER (provider)' failed
Nautilus-Share-Message: Called "net usershare info" but it failed: 'net usershare' returned error 1: Can't load /etc/samba/smb.conf - run testparm to debug it


** (nautilus-desktop:19592): CRITICAL **: nautilus_menu_provider_get_background_items: assertion 'NAUTILUS_IS_MENU_PROVIDER (provider)' failed

** (nautilus-desktop:19592): CRITICAL **: nautilus_menu_provider_get_background_items: assertion 'NAUTILUS_IS_MENU_PROVIDER (provider)' failed

** (nautilus-desktop:19592): CRITICAL **: nautilus_menu_provider_get_background_items: assertion 'NAUTILUS_IS_MENU_PROVIDER (provider)' failed
Segmentation fault (core dumped)

Happens when attempting to open the properties window on the attached file from the desktop.  Works fine when inside a normal Nautilus window.  

Arch Linux with Nautilus 3.24.2-1
Comment 1 Ben Daines 2017-07-23 01:28:13 UTC
Can't seem to post the file (bugzilla issue?), but it does seem to happen with any image files on the desktop.  .tiff files do it as well as .jpg and I'd imagine others as well.
Comment 2 Ben Daines 2017-07-23 01:29:42 UTC
Created attachment 356216 [details]
jpg that causes seg fault

Apologies for the spam, VPN issue.  Here's the .jpg.
Comment 3 Ernestas Kulik 2017-07-23 06:26:47 UTC
Confirming. The stack trace I get indicates that the crash happens somewhere in Exempi.
Comment 4 Ernestas Kulik 2017-07-23 12:22:06 UTC
Created attachment 356228 [details] [review]
desktop: initialize Exempi in main()

Opening the file properties window causes a crash with images that have
embedded XMP information. This is caused by not initializing the library
properly.
Comment 5 Carlos Soriano 2017-08-07 10:42:30 UTC
Review of attachment 356228 [details] [review]:

woh, good catch Ernestas! This is why you get paid so much :D :D
Comment 6 Ernestas Kulik 2017-08-07 10:52:04 UTC
Attachment 356228 [details] pushed as 10e840d - desktop: initialize Exempi in main()