desktop: initialize Exempi in main()

Opening the file properties window causes a crash with images that have
embedded XMP information. This is caused by not initializing the library
properly.

https://bugzilla.gnome.org/show_bug.cgi?id=785292